=== nautilus 2.1.91 ===

2003-01-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 2.1.91.
	Require eel 2.1.91.

2003-01-13  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-background.c:
	Rename nautilus_file_update_desktop_pixmaps to 
	nautilus_file_update_root_pixmaps for clarity.
	Call eel_background_set_is_constant_size on the desktop
	background earlier.
	Set the color on the correct window (root window, not desktop window).

	* libnautilus-private/nautilus-icon-container.c:
	Override the draw_background signal to not clear/redraw the background
	on every expose. That's not needed since EelBackground correctly sets
	the background of the XWindow.

2003-01-13  Dave Camp  <dave@ximian.com>

	* components/image_properties/nautilus-image-properties-view.c
	(nautilus_image_properties_view_class_init): Save the parent
	class.
	(nautilus_image_properties_view_finalize): Chain to the parent
	class.

2003-01-12  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c (key_press_callback): Only
	handle keypresses on the bin window.

	Fixes #102259, thanks to Pasupathi <pasupathi.duraisamy@wipro.com>
	for helping to track this down.
	
2003-01-12  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c (button_press_callback): In
	single click mode, don't activate if shift or control is held
	down.  This matches the icon view behavior.

	Fixes #81896.

2003-01-12  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c: (button_press_callback): Handle
	activation and the popup menu from here.
	(create_and_set_up_tree_view): Don't connect to
	button_release_event or event_after.

	Fixes #91176.

2003-01-08  Alex Duggan  <aldug@gnome.org>

	* configure.in:
	Use pkg-config instead of orbit2-config. (fixes #73299)

	* libnautilus-private/nautilus-icon-container.c:
	Remove unneccessary include of libnautilus/nautilus-clipboard.h
	
	* src/file-manager/fm-directory-view.c: